--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
@@ -19,6 +20,8 @@
     "remark-gfm": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
+  "react-hot-toast": "^2.4.1",
+  "pdfjs-dist": "^3.11.0",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
