--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,33 @@
 # ChatHarvard Dependencies
-
-pandas==2.2.2
-anthropic>=0.5.0
-numpy>=1.24.3
 chromadb==0.4.18
+
+
+
+# Web and API Framework
+flask
+flask-session
+
+# CORS and Environment
+python-dotenv
+requests
+
+# JWT Auth
+pyjwt
+
+# NLP and Data Processing
+nltk
+pandas==2.2.2
+numpy>=1.24.3
+
+# File Parsing
 PyPDF2==3.0.1
 
+# AI Clients
+openai
+anthropic>=0.5.0
 
+# Vector Search and Ranking
+sentence-transformers
+faiss-cpu
+scikit-learn
+rank_bm25
