--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["python311", "gcc"]
 cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "python app.py"
+cmd = "gunicorn 'app:app' --bind=0.0.0.0:$PORT"
 
 [variables]
 PORT = "5050"
